--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".CheckListItem"
+            android:name=".ItemsCheckListSingleItem"
             android:exported="false" />
         <activity
-            android:name=".CheckList"
+            android:name=".ItemsCheckList"
             android:exported="false"
             android:parentActivityName=".ItemListActivity" />
         <activity
